<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wayeal.newair.monitor.RealTimeListActivity"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_blue_tablayout"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_state_title"
            android:textSize="14sp"
            android:textColor="@color/blackText"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />

        <com.wayeal.newair.common.view.ChooseView
            android:id="@+id/sessionState"
            android:layout_width="208dp"
            android:layout_height="24dp"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_state_title"
            android:textSize="14sp"
            android:textColor="@color/blackText"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />

        <com.wayeal.newair.common.view.ChooseView
            android:id="@+id/systemState"
            android:layout_width="208dp"
            android:layout_height="24dp"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_title"
            android:textSize="14sp"
            android:textColor="@color/blackText"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />

        <com.wayeal.newair.common.view.ChooseView
            android:id="@+id/testPoint"
            android:layout_width="208dp"
            android:layout_height="24dp"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_time_title"
            android:textSize="14sp"
            android:textColor="@color/blackText"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            />

        <com.wayeal.newair.common.view.ChooseView
            android:id="@+id/refreshTime"
            android:layout_width="208dp"
            android:layout_height="24dp"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp" />

        <Button
            android:id="@+id/getRealTimeListData"
            android:text="@string/query"
            android:layout_width="44dp"
            android:layout_height="21dp"
            android:background="@mipmap/bt_search_bg"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:text="@string/station_simple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:textColor="#343434"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            style="@style/real_time_common_title_text"
            android:text="@string/AQI"
            />
        <TextView
            style="@style/real_time_common_title_text"
            android:text="@string/main_pollution"
            />
        <TextView
            style="@style/real_time_common_title_text"
            android:text="@string/session_state"
            />
        <TextView
            style="@style/real_time_common_title_text"
            android:text="@string/system_state"
            />
        <TextView
            style="@style/real_time_common_title_text"
            android:text="@string/operation"
            />

    </LinearLayout>

    <com.wayeal.newair.common.view.LoadingLayout
        android:id="@+id/realTimeListLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/realTimeListRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/realTimeListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">
            </android.support.v7.widget.RecyclerView>

            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    </com.wayeal.newair.common.view.LoadingLayout>

</LinearLayout>