<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    >

    <LinearLayout
        android:id="@+id/center_bg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/shape_title_item_bg"
        >

        <TextView
            android:id="@+id/title"
            android:text="@string/tip"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >

            <TextView
                android:text="@string/please_select_province"
                style="@style/choose_point_dialog_item_text"
                />

            <include
                android:id="@+id/selectProvince"
                layout="@layout/common_item_with_arrow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >

            <TextView
                android:text="@string/please_select_city"
                style="@style/choose_point_dialog_item_text"
                />

            <include
                android:id="@+id/selectCity"
                layout="@layout/common_item_with_arrow"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSelectCounty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >

            <TextView
                android:text="@string/please_select_county"
                style="@style/choose_point_dialog_item_text"
                />

            <include
                android:id="@+id/selectCounty"
                layout="@layout/common_item_with_arrow"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSelectStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >

            <TextView
                android:text="@string/please_select_station"
                style="@style/choose_point_dialog_item_text"
                />

            <include
                android:id="@+id/selectStation"
                layout="@layout/common_item_with_arrow"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_width="44dp"
                android:layout_height="21dp"
                android:background="@mipmap/bt_search_bg"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_toLeftOf="@+id/center"/>

            <View
                android:id="@+id/center"
                android:layout_width="50dp"
                android:layout_height="21dp"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/confirm"
                android:layout_width="44dp"
                android:layout_height="21dp"
                android:background="@mipmap/bt_search_bg"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/center"/>
        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>