<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/gis_drawer_white_bg"
    android:layout_gravity="start"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#333333"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/pollution_type"
            android:textColor="#333333"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:id="@+id/pollution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="40dp"
        android:id="@+id/picture_legnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legnd"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#666666"
        android:textSize="13sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="25dp"
        android:text="@string/aqi_tips"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        android:textColor="#666666"
        />




</LinearLayout>