<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonPageColor"
    android:orientation="vertical"
    tools:context="com.wayeal.newair.data.DataFragment"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_blue_tablayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        >

        <RelativeLayout
            android:id="@+id/historicalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_historical_data_bg"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_data"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_data_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_historical_data"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dayData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_day_data_bg"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_data"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_data_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_day_data"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/historicalDataCurve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_gis_map_bg"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_data_cruve"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_data_cruve_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_historical_curve"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/aqiCurve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_aqi_curve_bg"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi_curve"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aqi_curve_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_aqi_curve"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>