<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonPageColor"
    android:orientation="vertical"
    tools:context="com.wayeal.newair.monitor.MonitorFragment"
    android:fitsSystemWindows="true"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_blue_tablayout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        >

        <RelativeLayout
            android:id="@+id/realTimeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_real_time_list_bg"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time_view"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time_view_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_real_time_view"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/realTimeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_real_time_data_bg"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time_data"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time_data_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_real_time_data"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/gisMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/item_gis_map_bg"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gis_map"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gis_map_des"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="67dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/circle_white_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="36dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_gis_map"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>